--- a/Photo Editor/index.html
+++ b/Photo Editor/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>Vite + React</title>
   </head>
-  <body>
+  <body class="bg-[#E3F2FD]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
